SFDC Automation/src/objects/Sales_Territory__c.object
<CustomObject>
    <fields>
        <fullName>RydeSmart_Owners__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RydeSmart Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will contain the SAC associated with that Sales Territory</description>
        <label>SAC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Territories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Code__c</fullName>
        <externalId>true</externalId>
        <label>Sales Territory Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Desc__c</fullName>
        <label>Sales Territory Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Territory_Code__c</columns>
        <columns>Sales_Territory_Desc__c</columns>
        <columns>RydeSmart_Owners__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>